今日の成果・今後の課題

--- a/AndroidSample11_15/remort/res/layout/activity_main.xml
+++ b/AndroidSample11_15/remort/res/layout/activity_main.xml
@@ -85,4 +85,31 @@
         android:text="0sec000"
         tools:context=".MainActivity" />
 
+    <Button
+        android:id="@+id/button7"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textView3"
+        android:text="+" />
+
+    <Button
+        android:id="@+id/button8"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_alignParentRight="true"
+        android:text="-" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/button7"
+        android:layout_marginTop="14dp"
+        android:text="POW" />
+
 </RelativeLayout>
