コード格納クラス追加

--- a/リモコンアプリソース/remort/res/layout/activity_main.xml
+++ b/リモコンアプリソース/remort/res/layout/activity_main.xml
@@ -9,15 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="count:0"
-        tools:context=".MainActivity" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="2進数:0"
         tools:context=".MainActivity" />
 
     <Button
@@ -76,24 +67,6 @@
         android:layout_alignParentLeft="true"
         android:text="Help" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2"
-        android:text="0sec000"
-        tools:context=".MainActivity" />
-
-    <Button
-        android:id="@+id/button7"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView3"
-        android:text="+" />
-
     <Button
         android:id="@+id/button8"
         style="?android:attr/buttonStyleSmall"
@@ -107,17 +80,26 @@
         android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button8"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/button7"
-        android:layout_marginTop="14dp"
+        android:layout_marginBottom="20dp"
         android:text="POW" />
+
+    <Button
+        android:id="@+id/button7"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button8"
+        android:layout_alignParentRight="true"
+        android:text="+" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
         android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:text="Learn" />
 
 </RelativeLayout>
